# pyembroidery

./: .gitignore  .travis.yml  README.inkstitch.md  README.md  mass_convert.py  pyembroidery-convert.py  pyembroidery-exporter.py  pyproject.toml  requirements.txt  setup.py  stitch_entry_pmv.py  test.py  test_fractals.py
.github/workflows/: unittests.yml
pyembroidery/: 10oReader.py  A100Reader.py  A10oReader.py  BroReader.py  CountReader.py  CsvReader.py  CsvWriter.py  DatReader.py  DsbReader.py  DstReader.py  DstWriter.py  DszReader.py  EmbConstant.py  EmbEncoder.py  EmbPattern.py  EmbThread.py  EmbThreadJef.py  EmbThreadPec.py  EmbThreadSew.py  EmbThreadShv.py  EmdReader.py  ExpReader.py  ExpWriter.py  ExyReader.py  FxyReader.py  GcodeWriter.py  GcodebCNCWriter.py  GenericWriter.py  GtReader.py  InbReader.py  InkstitchGcodeWriter.py  IqpReader.py  JefReader.py  JefWriter.py  JpxReader.py  KsmReader.py  MaxReader.py  MitReader.py  NewReader.py  PatternReader.py  (+39 more)
src/inkstitch_pyembroidery/: EmbMatrix.py  EmbPattern.py  EmbThread.py  GenericWriter.py  PltReader.py  PyEmbroidery.py  Vp3Writer.py  __init__.py  exceptions.py
src/pystitch/: GenericWriter.py  InkstitchGcodeWriter.py  PltReader.py  QccReader.py  QccWriter.py  __init__.py
test/: pattern_for_tests.py  test_convert_dst.py  test_convert_pes.py  test_convert_u01.py  test_encoder.py  test_generic.py  test_interpolate.py  test_matrix.py  test_palette.py  test_trims_dst_jef.py  test_writes.py
tests/: test_basic.py  test_simple.py
tests/formats/dst/: Hopea.DST
tests/formats/exp/: Hopea.exp
(+4 files in other folders)
