[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pystitch"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.9"
authors = [
  {name = "Tatarize"},
]
maintainers = [
  {name = "Kaalleen"},
]
description = "Embroidery IO library"
readme = "README.inkstitch.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["embroidery", "file conversion"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Repository = "https://github.com/inkstitch/pystitch"
Issues = "https://github.com/inkstitch/pystitch/issues"
